--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,9 +7,22 @@ trigger:
 - master
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: 'macOS-latest'
 
 steps:
+- task: Gradle@2
+  inputs:
+    workingDirectory: ''
+    gradleWrapperFile: 'gradlew.'
+    gradleOptions: '-Xmx3072m'
+    javaHomeOption: 'JDKVersion'
+    jdkVersionOption: '1.8'
+    jdkArchitectureOption: 'x64'
+    publishJUnitResults: false
+    testResultsFiles: '**/TEST-*.xml'
+    tasks: 'assembleRelease'
+  displayName: gradlew assembleDebug test
+
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
