--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
 - task: Gradle@2
   inputs:
     workingDirectory: '$(system.defaultWorkingDirectory)/MyApp'
-    gradleWrapperFile: '$(system.defaultWorkingDirectory)gradlew'
+    gradleWrapperFile: '$(system.defaultWorkingDirectory)/gradlew'
     gradleOptions: '-Xmx3072m'
     javaHomeOption: 'JDKVersion'
     jdkVersionOption: '1.8'
