--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,14 +7,14 @@ trigger:
 - master
 
 pool:
-  vmImage: 'macOS-latest'
+  vmImage: 'macOS-11'
 
 steps:
 
 - task: Gradle@2
   inputs:
-    workingDirectory: '$(system.defaultWorkingDirectory)'
-    gradleWrapperFile: '$(system.defaultWorkingDirectory)/gradlew'
+    workingDirectory: ''
+    gradleWrapperFile: '$gradlew'
     gradleOptions: '-Xmx3072m'
     javaHomeOption: 'JDKVersion'
     jdkVersionOption: '1.8'
